kubernetes-manifests/08-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service-devops
  namespace: haproxy-controller-devops
  labels:
    run: haproxy-ingress
spec:
  type: NodePort
  selector:
    run: haproxy-ingress
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 32456

  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
    nodePort: 32567

  - name: stat
    port: 1024
    protocol: TCP
    targetPort: 6060
    nodePort: 32678
